--- a/Sunwise/Component/LocationSelectedView/LocationSelected.xib
+++ b/Sunwise/Component/LocationSelectedView/LocationSelected.xib
@@ -2,9 +2,10 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,45 +21,50 @@
             <rect key="frame" x="0.0" y="0.0" width="167" height="162"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rxe-Hf-DoR">
-                    <rect key="frame" x="10" y="10" width="147" height="142"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rxe-Hf-DoR">
+                    <rect key="frame" x="0.0" y="0.0" width="167" height="162"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbP-dI-3SK">
-                            <rect key="frame" x="0.0" y="0.0" width="147" height="26"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbP-dI-3SK">
+                            <rect key="frame" x="0.0" y="0.0" width="167" height="20.333333333333332"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" name="LB-mainText"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uVl-mp-evP">
-                            <rect key="frame" x="0.0" y="38.666666666666664" width="147" height="39"/>
-                            <color key="tintColor" systemColor="labelColor"/>
+                            <rect key="frame" x="0.0" y="33" width="167" height="39"/>
+                            <color key="tintColor" name="LB-mainText"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="Mta-w9-AwO"/>
-                                <constraint firstAttribute="height" constant="44" id="TYA-Q7-pOb"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="TYA-Q7-pOb"/>
                             </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="Mta-w9-AwO"/>
+                                </mask>
+                            </variation>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kE-su-5Mv">
-                            <rect key="frame" x="0.0" y="90" width="147" height="26"/>
+                            <rect key="frame" x="0.0" y="84.333333333333329" width="167" height="20.333333333333329"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" name="LB-mainText"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mv7-Tx-18Q">
-                            <rect key="frame" x="0.0" y="126" width="147" height="16"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Mv7-Tx-18Q">
+                            <rect key="frame" x="0.0" y="114.66666666666667" width="167" height="47.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" name="LB-mainText"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="BG-lightYellow"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rxe-Hf-DoR" secondAttribute="trailing" constant="10" id="Dgk-nK-G3M"/>
-                <constraint firstItem="rxe-Hf-DoR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="aLq-zk-a5J"/>
-                <constraint firstItem="rxe-Hf-DoR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="nFe-fv-qUy"/>
-                <constraint firstAttribute="bottom" secondItem="rxe-Hf-DoR" secondAttribute="bottom" constant="10" id="qht-zJ-K1Q"/>
+                <constraint firstAttribute="bottom" secondItem="rxe-Hf-DoR" secondAttribute="bottom" id="1bl-hB-63o"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rxe-Hf-DoR" secondAttribute="trailing" id="6a2-Yg-U4U"/>
+                <constraint firstItem="rxe-Hf-DoR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GVp-gu-xqL"/>
+                <constraint firstItem="rxe-Hf-DoR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="qcL-Wi-FTo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-241.98473282442748" y="-222.53521126760563"/>
@@ -66,11 +72,11 @@
     </objects>
     <resources>
         <image name="cloud.fill" catalog="system" width="128" height="87"/>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="BG-lightYellow">
+            <color red="1" green="1" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="LB-mainText">
+            <color red="0.54100000858306885" green="0.13300000131130219" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
