--- a/Sunwise/View/Weather/CollectionViewCell/HourlyCollectionViewCell.xib
+++ b/Sunwise/View/Weather/CollectionViewCell/HourlyCollectionViewCell.xib
@@ -2,7 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,55 +19,66 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFT-8A-tyC">
-                        <rect key="frame" x="10" y="10" width="111" height="120"/>
+                        <rect key="frame" x="5" y="5" width="121" height="130"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="RDC-Er-1dn">
-                                <rect key="frame" x="10" y="10" width="91" height="100"/>
+                                <rect key="frame" x="10" y="5" width="101" height="120"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZS-dJ-qJ7">
-                                        <rect key="frame" x="25.000000000000004" y="0.0" width="41.333333333333343" height="26.666666666666668"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="22.333333333333339" y="0.0" width="56.666666666666657" height="33.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" name="LB-mainText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HET-aA-HRU">
-                                        <rect key="frame" x="7.3333333333333357" y="36.666666666666664" width="76.666666666666657" height="26.666666666666664"/>
+                                        <rect key="frame" x="12.333333333333336" y="43.333333333333329" width="76.666666666666657" height="33.333333333333329"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" name="LB-mainText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4j2-eB-Kls">
-                                        <rect key="frame" x="25.000000000000004" y="73.333333333333329" width="41.333333333333343" height="26.666666666666671"/>
+                                        <rect key="frame" x="30.000000000000004" y="86.666666666666671" width="41.333333333333343" height="33.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" name="LB-mainText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <color key="backgroundColor" name="BG-lightYellow"/>
                         <constraints>
-                            <constraint firstItem="RDC-Er-1dn" firstAttribute="top" secondItem="RFT-8A-tyC" secondAttribute="top" constant="10" id="UZQ-p2-Q6f"/>
+                            <constraint firstItem="RDC-Er-1dn" firstAttribute="top" secondItem="RFT-8A-tyC" secondAttribute="top" constant="5" id="UZQ-p2-Q6f"/>
                             <constraint firstItem="RDC-Er-1dn" firstAttribute="leading" secondItem="RFT-8A-tyC" secondAttribute="leading" constant="10" id="c7S-4L-aoS"/>
                             <constraint firstAttribute="trailing" secondItem="RDC-Er-1dn" secondAttribute="trailing" constant="10" id="iYJ-OS-ndJ"/>
-                            <constraint firstAttribute="bottom" secondItem="RDC-Er-1dn" secondAttribute="bottom" constant="10" id="jfR-ux-LVu"/>
+                            <constraint firstAttribute="bottom" secondItem="RDC-Er-1dn" secondAttribute="bottom" constant="5" id="jfR-ux-LVu"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" name="BG-lightYellow"/>
             <constraints>
-                <constraint firstItem="RFT-8A-tyC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="A5L-mR-oZ1"/>
-                <constraint firstItem="RFT-8A-tyC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="ALU-5L-Xyy"/>
-                <constraint firstAttribute="bottom" secondItem="RFT-8A-tyC" secondAttribute="bottom" constant="10" id="ND8-Cq-zyV"/>
-                <constraint firstAttribute="trailing" secondItem="RFT-8A-tyC" secondAttribute="trailing" constant="10" id="mBd-KC-tVI"/>
+                <constraint firstItem="RFT-8A-tyC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="A5L-mR-oZ1"/>
+                <constraint firstItem="RFT-8A-tyC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="ALU-5L-Xyy"/>
+                <constraint firstAttribute="bottom" secondItem="RFT-8A-tyC" secondAttribute="bottom" constant="5" id="ND8-Cq-zyV"/>
+                <constraint firstAttribute="trailing" secondItem="RFT-8A-tyC" secondAttribute="trailing" constant="5" id="mBd-KC-tVI"/>
             </constraints>
             <size key="customSize" width="131" height="140"/>
             <connections>
                 <outlet property="hour" destination="4j2-eB-Kls" id="ePk-jj-f2C"/>
                 <outlet property="symbolText" destination="gZS-dJ-qJ7" id="03H-cE-0Jo"/>
                 <outlet property="uVI" destination="HET-aA-HRU" id="Lkl-3b-rMq"/>
+                <outlet property="viewColor" destination="RFT-8A-tyC" id="4Mz-e8-dbx"/>
             </connections>
             <point key="canvasLocation" x="-245.03816793893128" y="52.112676056338032"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="BG-lightYellow">
+            <color red="1" green="1" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="LB-mainText">
+            <color red="0.54100000858306885" green="0.13300000131130219" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
